# expgram

./: .gitignore  API.rst  BUILD.rst  INTERNALS.rst  LICENSE  LICENSE.rst  LICENSES.rst  Makefile.am  NEWS  NEWS.rst  README  README-detail.rst  README.rst  TODO  TODO.rst  configure.ac
codec/: Makefile.am  block_device.hpp  block_file.hpp  bzip2_codec.hpp  codec.hpp  fastlz_codec.cpp  fastlz_codec.hpp  pfor_codec.hpp  quicklz_block_file.hpp  quicklz_codec.cpp  quicklz_codec.hpp  sample_block_file.cpp  sample_block_sink.cpp  zlib_codec.hpp
config/: boost.m4
doc/: Makefile.am  expgram.py.rst  expgram.rst  expgram_backward.rst  expgram_backward_mpi.rst  expgram_bound.rst  expgram_bound_mpi.rst  expgram_clean.rst  expgram_counts_diff.rst  expgram_counts_dump.rst  expgram_counts_estimate.rst  expgram_counts_estimate_mpi.rst  expgram_counts_extract.rst  expgram_counts_extract_mpi.rst  expgram_counts_modify.rst  expgram_counts_modify_mpi.rst  expgram_counts_stat.rst  expgram_dump.rst  expgram_index.rst  expgram_perplexity.rst  expgram_quantize.rst  expgram_quantize_mpi.rst  expgram_stat.rst  expgram_vocab.rst  expgram_vocab_mpi.rst
examples/: web1t-zh.sh
expgram/: Discount.hpp  Makefile.am  NGram.cpp  NGram.hpp  NGramCounts.cpp  NGramCounts.hpp  NGramCountsIndexer.hpp  NGramIndex.cpp  NGramIndex.hpp  NGramScorer.hpp  NGramState.hpp  NGramStateChart.hpp  Quantizer.hpp  Sentence.cpp  Sentence.hpp  Stat.hpp  Stemmer.cpp  Stemmer.hpp  Vocab.cpp  Vocab.hpp  Word.cpp  Word.hpp
man/: Makefile.am  expgram.py.rst  expgram.rst  expgram_backward.rst  expgram_backward_mpi.rst  expgram_bound.rst  expgram_bound_mpi.rst  expgram_clean.rst  expgram_counts_diff.rst  expgram_counts_estimate.rst  expgram_counts_estimate_mpi.rst  expgram_counts_extract.rst  expgram_counts_extract_mpi.rst  expgram_counts_index.rst  expgram_counts_index_mpi.rst  expgram_counts_modify.rst  expgram_counts_modify_mpi.rst  expgram_counts_stat.rst  expgram_diff.rst  expgram_index.rst  expgram_perplexity.rst  expgram_quantize.rst  expgram_quantize_mpi.rst  expgram_stat.rst  expgram_vocab.rst  expgram_vocab_mpi.rst
progs/: .gitignore  Makefile.am  expgram.cpp  expgram_backward.cpp  expgram_backward_mpi.cpp  expgram_bound.cpp  expgram_bound_mpi.cpp  expgram_clean.cpp  expgram_counts_diff.cpp  expgram_counts_dump.cpp  expgram_counts_estimate.cpp  expgram_counts_estimate_mpi.cpp  expgram_counts_extract.cpp  expgram_counts_extract_impl.hpp  expgram_counts_extract_mpi.cpp  expgram_counts_index.cpp  expgram_counts_index_mpi.cpp  expgram_counts_modify.cpp  expgram_counts_modify_mpi.cpp  expgram_counts_stat.cpp  expgram_diff.cpp  expgram_dump.cpp  expgram_index.cpp  expgram_perplexity.cpp  expgram_quantize.cpp  expgram_quantize_mpi.cpp  expgram_stat.cpp  expgram_vocab.cpp  expgram_vocab_impl.hpp  expgram_vocab_mpi.cpp  mpish.cpp  ngram.cpp  ngram_bound.cpp  ngram_bound_mpi.cpp  ngram_counts.cpp  ngram_counts_dump.cpp  ngram_counts_estimate.cpp  ngram_counts_estimate_mpi.cpp  ngram_counts_extract.cpp  ngram_counts_extract_impl.hpp  (+18 more)
sample/: .gitignore  Makefile.am  ngram.cpp  ngram_counts.cpp  web1t-en.sh  web1t-ja.sh  web1t-zh.sh
scripts/: Makefile.am  expgram.py  ngram.py
stemmer/: Makefile.am
succinct_db/: Makefile.am  sample_succinct_hash.cpp  sample_succinct_trie.cpp  sample_succinct_trie_database.cpp  sample_succinct_trie_db.cpp  succinct_hash.hpp  succinct_hash_db.hpp  succinct_trie.hpp  succinct_trie_database.hpp  succinct_trie_db.hpp  succinct_trie_db_main.cpp
utils/: .gitignore  Makefile.am  aligned_allocator.hpp  alloc_vector.hpp  arc_list.hpp  atomicop.hpp  bithack.hpp  bithack_main.cpp  byte_aligned_code.hpp  chart.hpp  chunk_vector.hpp  chunk_vector_main.cpp  compact_trie.hpp  compress_stream.hpp  config.hpp  group_aligned_code.hpp  icu_filter.cpp  icu_filter.hpp  indexed_hashtable.hpp  istream_line_iterator.hpp  lexical_cast.hpp  lockfree_list_queue.hpp  lockfree_queue.hpp  malloc_stats.cpp  map_file.hpp  map_file_allocator.hpp  memory.hpp  mpi.hpp  mpi_device.hpp  mpi_stream.hpp  mpi_stream_simple.hpp  mpi_traits.hpp  packed_vector.hpp  pfor_vector.hpp  sample_chunk_vector.cpp  sample_group_aligned_code.cpp  sample_pfor_vector.cpp  sample_subprocess  sample_subprocess.cpp  sample_vector2.cpp  (+14 more)
